src/test/ui/hrtb/hrtb-exists-forall-trait-invariant.stderr
error[E0277]: the trait bound `(): Trait<for<'b> fn(std::cell::Cell<&'b u32>)>` is not satisfied
  --> $DIR/hrtb-exists-forall-trait-invariant.rs:28:11
   |
LL | fn foo<T>()
   |    --- required by a bound in this
LL | where
LL |     T: Trait<for<'b> fn(Cell<&'b u32>)>,
   |        -------------------------------- required by this bound in `foo`
...
LL |     foo::<()>();
   |           ^^ the trait `Trait<for<'b> fn(std::cell::Cell<&'b u32>)>` is not implemented for `()`
   |
   = help: the following implementations were found:
             <() as Trait<fn(std::cell::Cell<&'a u32>)>>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
